--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,18 @@
   <body>
     <div>
       <h1>Shop Keepers</h1>
+      <button>choose type</button>
+      <button id="quiz-button">play quiz</button>
+      <div id="quiz" class="hidden">
+        <div id="question">question goes here</div>
+        <div id="answers-container">
+          <div id="answer1">1</div>
+          <div id="answer2">2</div>
+          <div id="answer3">3</div>
+          <div id="answer4">4</div>
+        </div>
+        <button id="submit-quiz">submit</button>
+      </div>
     </div>
   </body>
 </html>
