--- a/index.html
+++ b/index.html
@@ -16,18 +16,22 @@
   </head>
   <body>
     <div>
-      <h1>Shop Keepers</h1>
-      <button>choose type</button>
-      <button id="quiz-button">play quiz</button>
-      <div id="quiz" class="hidden">
-        <div id="questions-screen">
-          <h4 id="question"></h4>
-          <div id="answers-container"></div>
-          <button id="submit-quiz">submit</button>
-        </div>
-        <div id="answers-screen" class="hidden">
-          <h4>the answer...</h4>
-          <div id="answer-revealed"></div>
+      <div id="top-container">
+        <h1>Shop Keepers</h1>
+        <button>choose type</button>
+        <button id="quiz-button">play quiz</button>
+      </div>
+      <div id="popup-container">
+        <div id="quiz" class="hidden">
+          <div id="questions-screen">
+            <h4 id="question"></h4>
+            <div id="answers-container"></div>
+            <button id="submit-quiz">submit</button>
+          </div>
+          <div id="answers-screen" class="hidden">
+            <h4>the answer...</h4>
+            <div id="answer-revealed"></div>
+          </div>
         </div>
       </div>
     </div>
