increase inventory when win quiz

--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
     <div>
       <div id="top-container">
         <h1>Shop Keepers</h1>
-        <button id="choose-type-button">choose shop type</button>
-        <button id="quiz-button">play quiz</button>
+        <div id="ui-container">
+          <button id="choose-type-button">choose shop type</button>
+          <button id="quiz-button">play quiz</button>
+          <div id="my-info">
+            <div id="my-inventory"></div>
+            <div id="my-money"></div>
+          </div>
+        </div>
       </div>
       <div id="popup-container">
         <div id="quiz" class="hidden popupItem">
