added div with open close for upgrade market

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div id="ui-container">
           <button id="choose-type-button">choose shop type</button>
           <button id="quiz-button">play quiz</button>
+          <button id="upgrade-market-button">upgrade market</button>
           <div id="my-info">
             <div id="my-inventory"></div>
             <div id="my-money"></div>
@@ -51,6 +52,11 @@
           <button class="close-button" id="close-choose-type">X</button>
           <div>Choose what type of shop you want!</div>
           <div id="type-choices"></div>
+        </div>
+        <div id="upgrade-market" class="hidden popupItem">
+          <button class="close-button" id="close-upgrade-market">X</button>
+          <div>UPGRADE MARKET</div>
+          <div id="upgrade-choices"></div>
         </div>
       </div>
     </div>
