--- a/shopSketch/index.html
+++ b/shopSketch/index.html
@@ -12,7 +12,9 @@
   </head>
 
   <body>
-    <script src="dudes.js"></script>
+    <script src="info.js"></script>
+    <!-- <script src="dudes.js"></script> -->
+    <script src="shop.js"></script>
 
   </body>
 </html>
