--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <div id="top-container">
         <h1>Shop Keepers</h1>
         <div id="ui-container">
-          <button id="choose-type-button">choose shop type</button>
-          <button id="quiz-button">play quiz</button>
-          <button id="upgrade-market-button">market</button>
+          <button id="choose-type-button" class="ui-button">choose shop type</button>
+          <button id="quiz-button" class="ui-button">play quiz</button>
+          <button id="upgrade-market-button" class="ui-button">market</button>
           <div id="my-info">
             <div id="my-upgrades"></div>
             <div id="my-money"></div>
