--- a/shopSketch/index.html
+++ b/shopSketch/index.html
@@ -14,7 +14,7 @@
   <body>
     <script src="info.js"></script>
     <!-- <script src="dudes.js"></script> -->
-    <script src="shop.js"></script>
+    <script src="oldhshop.js"></script>
 
   </body>
 </html>
