--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         
           <!-- Tab Content -->
           <div class="tab-content" id="inventory-tab">
-            <h4>inventory</h4>
+            <!-- <h4>inventory</h4> -->
             <div id="inventory-choices" class="market-choices"></div>
           </div>
           <div class="tab-content hidden" id="shop-upgrades-tab">
-            <h4>shop upgrades</h4>
+            <!-- <h4>shop upgrades</h4> -->
             <div id="shop-upgrade-choices" class="market-choices"></div>
           </div>
         </div>
