dude buy inventory function working and added god mode

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <button id="choose-type-button" class="ui-button">choose shop type</button>
           <button id="quiz-button" class="ui-button">play quiz</button>
           <button id="upgrade-market-button" class="ui-button">market</button>
+          <button id="test-dude-button">test dude button</button>
           <div id="my-info">
             <div id="my-upgrades"></div>
             <div id="my-money"></div>
