--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Shop Keepers</title>
+    <title>Little Dudes</title>
     <link rel="icon" href="favicon.png" />
     <link rel="stylesheet" href="src/styles/main.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap" rel="stylesheet">
 
     <script defer src="https://cdn.jsdelivr.net/npm/p5@1.9.1/lib/p5.js"></script>
     <script
@@ -21,7 +21,7 @@
   <body>
     <div>
       <div id="top-container">
-        <h1>Shop Keepers</h1>
+        <h1>Little Dudes</h1>
         <div id="ui-container">
           <button id="choose-type-button" class="ui-button">choose shop type</button>
           <button id="quiz-button" class="ui-button">play quiz</button>
