giving up on the adding images to buttons but at least styling is somewhat there

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div>
       <div id="top-container">
-        <h1>Little Dudes</h1>
+        <img src="assets/Little-Dudes-Logo.png" alt="Little Dudes Logo" class="logo-image" id="logo" />
         <div id="ui-container">
           <button id="choose-type-button" class="ui-button">choose shop type</button>
           <button id="quiz-button" class="ui-button">play quiz</button>
