--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Shop Keepers</title>
     <link rel="icon" href="favicon.png" />
-    <link rel="stylesheet" href="src/styles/main.css" />
+    <link rel="stylesheet" href="styles/main.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,7 +19,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"
     ></script>
     <script defer src="https://cdn.jsdelivr.net/npm/p5.party@latest/dist/p5.party.js"></script>
-    <script defer type="module" src="src/main.js"></script>
+    <script defer type="module" src="main.js"></script>
   </head>
   <body>
     <div>
