draw correct number of inventory and clear inventory every time dudes come

--- a/src/index.html
+++ b/src/index.html
@@ -49,9 +49,10 @@
             <div id="answer-revealed"></div>
           </div>
         </div>
-        <div id="choose-type" class="popupItem hidden">
+        <div id="choose-type" class="popupItem">
           <button class="close-button" id="close-choose-type">X</button>
           <div>Choose what type of shop you want!</div>
+          <div>(please choose bakery)</div>
           <div id="type-choices"></div>
         </div>
         <div id="upgrade-market" class="popupItem hidden">
