more style fixes

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Shop Keepers</title>
-    <link rel="icon" href="favicon.png" />
+    <link rel="icon" type="image/png" href="assets/favicon.png" />
     <link rel="stylesheet" href="styles/main.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
