more stylistic fixes

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
           <button id="test-dude-button">test dude button</button>
           <div id="my-info">
             <div id="my-upgrades"></div>
-            <div id="my-money"></div>
+            <!-- <div id="my-money"></div> -->
           </div>
         </div>
       </div>
@@ -54,7 +54,10 @@
         </div>
         <div id="upgrade-market" class="popupItem hidden">
           <button class="close-button" id="close-upgrade-market">X</button>
-          <h2>market</h2>
+          <div class="market-header">
+            <h2>market</h2>
+            <div id="my-money"></div>
+          </div>
           
           <!-- Tab Buttons -->
           <div class="tabs">
