--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
           <button id="test-dude-button">test dude button</button>
           <div id="my-info">
             <div id="my-upgrades"></div>
-            <!-- <div id="my-money"></div> -->
+            <div id="my-money-godMode"></div>
           </div>
         </div>
       </div>
