big creature becomes available after dudes are done

--- a/src/index.html
+++ b/src/index.html
@@ -32,10 +32,11 @@
         />
         <div id="ui-container">
           <button id="upgrade-market-button" class="ui-button">market</button>
+          <button id="test-dude-button" class="ui-button">unleash dudes</button>
           <div id="god-mode-container" class="hidden">
             <button id="choose-type-button">choose shop type</button>
             <button id="quiz-button">play quiz</button>
-            <button id="test-dude-button">test dude button</button>
+
             <div id="my-info">
               <div id="my-upgrades"></div>
               <div id="my-money-godMode"></div>
