choose screen done!

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div id="choose-type" class="popupItem hidden">
           <button class="close-button" id="close-choose-type">X</button>
-          <div>Choose what type of shop you want!</div>
+          <!-- <div>Choose your shop</div> -->
           <div id="type-choices"></div>
         </div>
         <div id="upgrade-market" class="popupItem hidden">
