integrate choose type styling changes

--- a/src/index.html
+++ b/src/index.html
@@ -62,10 +62,11 @@
           <button class="close-button close-button-god-mode hidden" id="close-choose-type">
             X
           </button>
-          <div>Choose what type of shop you want!</div>
-          <div>(please choose bakery)</div>
+          <h1>CHOOSE YOUR SHOP</h1>
           <div id="type-choices"></div>
-          <button id="next-exit-choose-shop-button">next (can click after choose type)</button>
+          <button id="next-exit-choose-shop-button" class="continue-button inactive">
+            CONTINUE
+          </button>
         </div>
         <div id="upgrade-market" class="popupItem hidden">
           <button class="close-button" id="close-upgrade-market">X</button>
