--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"
     ></script>
     <script defer src="https://cdn.jsdelivr.net/npm/p5.party@latest/dist/p5.party.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js"></script>
     <script defer type="module" src="main.js"></script>
   </head>
   <body>
@@ -43,6 +44,9 @@
             </div>
           </div>
         </div>
+      </div>
+      <div id="splash-animation" class="splash-animation">
+        <button id="start-button" class="start-button">START</button>
       </div>
       <div id="popup-container">
         <div id="quiz" class="hidden popupItem">
