--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,8 @@
         <div id="quiz" class="hidden popupItem">
           <button class="close-button close-button-god-mode hidden" id="close-quiz">X</button>
           <div id="questions-screen">
+            <h1>quiz</h1>
+            <h3>QUESTION</h3>
             <h4 id="question"></h4>
             <div id="answers-container"></div>
             <button id="submit-quiz">submit</button>
@@ -70,17 +72,21 @@
         </div>
         <div id="upgrade-market" class="popupItem hidden">
           <button class="close-button" id="close-upgrade-market">X</button>
-          <div class="market-header">
-            <h2>market</h2>
-            <div id="my-money"></div>
-          </div>
-
           <!-- Tab Buttons -->
           <div class="tabs">
-            <button class="tab-button active" data-tab="inventory">Inventory</button>
-            <button class="tab-button" data-tab="shop-upgrades">Shop Upgrades</button>
+            <button class="tab-button inv-tab active" data-tab="inventory">Inventory</button>
+            <button class="tab-button upg-tab" data-tab="shop-upgrades">Upgrades</button>
           </div>
-
+          <div class="market-header-row">
+            <div class="market-header-column wallet">
+              <div id="my-money"></div>
+              <p>my balance</p>
+            </div>
+            <div class="market-header-column">
+              <p>click on items to add them to your inventory!</p>
+            </div>
+            </div>
+  
           <!-- Tab Content -->
           <div class="tab-content" id="inventory-tab">
             <!-- <h4>inventory</h4> -->
