more stylistic fixes

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
             <button id="submit-quiz">submit</button>
           </div>
           <div id="answers-screen" class="hidden">
-            <h4>the answer...</h4>
+            <h1>quiz</h1>
             <div id="answer-revealed"></div>
             <button id="next-exit-quiz-button">next</button>
           </div>
