add new lottie screen and loading state

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,15 @@
       <div id="splash-animation" class="splash-animation">
         <button id="start-button" class="start-button">START</button>
       </div>
+      <div id="loading">
+        <img
+          src="assets/bigCreatures/4.png"
+          alt="Big Creature Loading"
+          class="loading-image"
+          id="loading-image"
+        />
+        <p id="loading-text">loading...</p>
+      </div>
       <div id="popup-container">
         <div id="quiz" class="hidden popupItem">
           <button class="close-button close-button-god-mode hidden" id="close-quiz">X</button>
@@ -95,8 +104,8 @@
             <div class="market-header-column">
               <p>click on items to add them to your inventory!</p>
             </div>
-            </div>
-  
+          </div>
+
           <!-- Tab Content -->
           <div class="tab-content" id="inventory-tab">
             <!-- <h4>inventory</h4> -->
