quiz sidebar looking good

--- a/src/index.html
+++ b/src/index.html
@@ -66,8 +66,10 @@
           </div>
           <div id="answers-screen" class="hidden">
             <h1>quiz</h1>
+            <h3>QUESTION</h3>
+            <h4 id="question-copy"></h4>
             <div id="answer-revealed"></div>
-            <button id="next-exit-quiz-button">next</button>
+            <button id="next-exit-quiz-button">close</button>
           </div>
         </div>
         <div id="choose-type" class="hidden popupItem">
