--- a/src/index.html
+++ b/src/index.html
@@ -1,134 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Little Dudes</title>
-    <link rel="icon" type="image/png" href="assets/favicon.png" />
-    <link rel="stylesheet" href="styles/main.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <title>Little Dudes</title>
+  <link rel="icon" type="image/png" href="assets/favicon.png" />
+  <link rel="stylesheet" href="styles/main.css" />
 
-    <script defer src="https://cdn.jsdelivr.net/npm/p5@1.9.1/lib/p5.js"></script>
-    <script
-      defer
-      src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"
-    ></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/p5.party@latest/dist/p5.party.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js"></script>
-    <script defer type="module" src="main.js"></script>
-  </head>
-  <body>
-    <div id="js-elements-container">
-      <div id="top-container">
-        <img
-          src="assets/Little-Dudes-Logo.png"
-          alt="Little Dudes Logo"
-          class="logo-image"
-          id="logo"
-        />
-        <div id="ui-container">
-          <button id="upgrade-market-button" class="ui-button">
-            <div class="ui-button-icon"></div>
-            market
-          </button>
-          <button id="test-dude-button" class="ui-button">
-            <div class="ui-button-icon"></div>
-            unleash dudes
-          </button>
-          <button id="quiz-button" class="ui-button">
-            <div class="ui-button-icon">?</div>
-            quiz
-          </button>
-          <div id="god-mode-container" class="hidden">
-            <button id="choose-type-button">choose shop type</button>
-            <div id="my-info">
-              <div id="my-upgrades"></div>
-              <div id="my-money-godMode"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div id="splash-animation" class="splash-animation">
-        <button id="start-button" class="start-button">START</button>
-      </div>
-      <div id="loading">
-        <img
-          src="assets/bigCreatures/4.png"
-          alt="Big Creature Loading"
-          class="loading-image"
-          id="loading-image"
-        />
-        <p id="loading-text">loading...</p>
-      </div>
-      <div id="big-creature-quiz">
-        <div id="quiz-creature-image-container">
-          <img src="assets/bigCreatures/2.png" alt="Big Creature Quiz" id="quiz-creature-image" />
-        </div>
-        <div id="quiz-creature-text-container">
-          <p id="loading-text">click to play the quiz and win more coins</p>
-        </div>
-      </div>
-      <div id="popup-container">
-        <div id="quiz" class="hidden popupItem">
-          <button class="close-button close-button-god-mode hidden" id="close-quiz">X</button>
-          <div id="questions-screen">
-            <h1>quiz</h1>
-            <h3>QUESTION</h3>
-            <h4 id="question"></h4>
-            <div id="answers-container"></div>
-            <button id="submit-quiz">submit</button>
-          </div>
-          <div id="answers-screen" class="hidden">
-            <h1>quiz</h1>
-            <h3>QUESTION</h3>
-            <h4 id="question-copy"></h4>
-            <div id="answer-revealed"></div>
-            <button id="next-exit-quiz-button">close</button>
-          </div>
-        </div>
-        <div id="choose-type" class="hidden popupItem">
-          <button class="close-button close-button-god-mode hidden" id="close-choose-type">
-            X
-          </button>
-          <h1>CHOOSE YOUR SHOP</h1>
-          <div id="type-choices"></div>
-          <button id="next-exit-choose-shop-button" class="continue-button inactive">
-            CONTINUE
-          </button>
-        </div>
-        <div id="upgrade-market" class="popupItem hidden">
-          <button class="close-button" id="close-upgrade-market">X</button>
-          <!-- Tab Buttons -->
-          <div class="tabs">
-            <button class="tab-button inv-tab active" data-tab="inventory">Inventory</button>
-            <button class="tab-button upg-tab" data-tab="shop-upgrades">Upgrades</button>
-          </div>
-          <div class="market-header-row">
-            <div class="market-header-column wallet">
-              <div id="my-money"></div>
-              <p>my balance</p>
-            </div>
-            <div class="market-header-column">
-              <p class="add-to-inv">click on items to add them to your inventory!</p>
-            </div>
-            </div>
-  
-          <!-- Tab Content -->
-          <div class="tab-content" id="inventory-tab">
-            <!-- <h4>inventory</h4> -->
-            <div id="inventory-choices" class="market-choices"></div>
-          </div>
-          <div class="tab-content hidden" id="shop-upgrades-tab">
-            <!-- <h4>shop upgrades</h4> -->
-            <div id="shop-upgrade-choices" class="market-choices"></div>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap" rel="stylesheet" />
+
+  <script defer src="https://cdn.jsdelivr.net/npm/p5@1.9.1/lib/p5.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/p5.party@latest/dist/p5.party.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js"></script>
+  <script defer type="module" src="main.js"></script>
+</head>
+
+<body>
+  <div id="js-elements-container">
+    <div id="top-container">
+      <img src="assets/Little-Dudes-Logo.png" alt="Little Dudes Logo" class="logo-image" id="logo" />
+      <div id="ui-container">
+        <button id="upgrade-market-button" class="ui-button">
+          <div class="ui-button-icon"></div>
+          market
+        </button>
+        <button id="test-dude-button" class="ui-button">
+          <div class="ui-button-icon"></div>
+          unleash dudes
+        </button>
+        <button id="quiz-button" class="ui-button">
+          <div class="ui-button-icon">?</div>
+          quiz
+        </button>
+        <div id="god-mode-container" class="hidden">
+          <button id="choose-type-button">choose shop type</button>
+          <div id="my-info">
+            <div id="my-upgrades"></div>
+            <div id="my-money-godMode"></div>
           </div>
         </div>
       </div>
     </div>
-  </body>
+    <div id="splash-animation" class="splash-animation">
+      <button id="start-button" class="start-button">START</button>
+    </div>
+    <div id="loading">
+      <img src="assets/bigCreatures/4.png" alt="Big Creature Loading" class="loading-image" id="loading-image" />
+      <p id="loading-text">loading...</p>
+    </div>
+    <div id="big-creature-quiz">
+      <div id="quiz-creature-image-container">
+        <img src="assets/bigCreatures/2.png" alt="Big Creature Quiz" id="quiz-creature-image" />
+      </div>
+      <div id="quiz-creature-text-container">
+        <p id="loading-text">click to play the quiz and win more coins</p>
+      </div>
+    </div>
+    <div id="popup-container">
+      <div id="quiz" class="hidden popupItem">
+        <button class="close-button close-button-god-mode hidden" id="close-quiz">X</button>
+        <div id="questions-screen">
+          <h1>quiz</h1>
+          <h3>QUESTION</h3>
+          <h4 id="question"></h4>
+          <div id="answers-container"></div>
+          <button id="submit-quiz">submit</button>
+        </div>
+        <div id="answers-screen" class="hidden">
+          <h1>quiz</h1>
+          <h3>QUESTION</h3>
+          <h4 id="question-copy"></h4>
+          <div id="answer-revealed"></div>
+          <button id="next-exit-quiz-button">close</button>
+        </div>
+      </div>
+      <div id="choose-type" class="hidden popupItem">
+        <button class="close-button close-button-god-mode hidden" id="close-choose-type">
+          X
+        </button>
+        <h1>CHOOSE YOUR SHOP</h1>
+        <div id="type-choices"></div>
+        <button id="next-exit-choose-shop-button" class="continue-button inactive">
+          CONTINUE
+        </button>
+      </div>
+      <div id="upgrade-market" class="popupItem hidden">
+        <button class="close-button" id="close-upgrade-market">X</button>
+        <!-- Tab Buttons -->
+        <div class="tabs">
+          <button class="tab-button inv-tab active" data-tab="inventory">Inventory</button>
+          <button class="tab-button upg-tab" data-tab="shop-upgrades">Upgrades</button>
+        </div>
+        <div class="market-header-row">
+          <div class="market-header-column wallet">
+            <div id="my-money"></div>
+            <p>my balance</p>
+          </div>
+          <div class="market-header-column">
+            <p class="add-to-inv">click on items to add them to your inventory!</p>
+          </div>
+        </div>
+
+        <!-- Tab Content -->
+        <div class="tab-content" id="inventory-tab">
+          <!-- <h4>inventory</h4> -->
+          <div id="inventory-choices" class="market-choices"></div>
+        </div>
+        <div class="tab-content hidden" id="shop-upgrades-tab">
+          <!-- <h4>shop upgrades</h4> -->
+          <div id="shop-upgrade-choices" class="market-choices"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
