--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
             unleash dudes
           </button>
           <button id="quiz-button" class="ui-button">
-            <div class="ui-button-icon">?</div>
+            <div class="ui-button-icon ui-button-quiz"></div>
             quiz
           </button>
           <div id="god-mode-container" class="hidden">
